OverviewControl set to position absolute (for flicker-free position change to fixed when scrolled). Zoom controls design changed to be more mama-like.

--- a/var/httpd/htdocs/skins/Agent/default/css/Core.OverviewControl.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/Core.OverviewControl.css
@@ -1,6 +1,6 @@
 /**
  * @project     OTRS (http://www.otrs.org) - Agent Frontend
- * @version     $Revision: 1.1 $
+ * @version     $Revision: 1.2 $
  * @copyright   OTRS AG
  * @license     AGPL (http://www.gnu.org/licenses/agpl.txt)
  */
@@ -16,8 +16,10 @@
  * @subsection  Overview Control General
  */
 .OverviewControl {
-    z-index: 100;
+    position: absolute;
     width: 100%;
+    background-color: #FFF;
+    z-index: 100;
 }
 
  /**
@@ -33,17 +35,25 @@
     position: fixed;
     top: 0px;
 }
+    
+.OverviewControl > div {
+    padding: 0 16px 0 8px;
+}
+    
+.RTL .OverviewControl > div {
+    padding: 0 8px 0 16px;
+}
 
 /**
  * @subsection  Control Row View Zoom
  */
 .OverviewZoom {
+    margin: 3px 7px 3px 0;
     float: right;
-    margin-right: 0px;
-    margin-top: 0px;
 }
 
 .RTL .OverviewZoom {
+    margin: 3px 0 3px 7px;
     float: left;
 }
 
@@ -56,40 +66,43 @@
 }
 
 .OverviewZoom a {
-    width: 24px;
-    height: 24px;
+    width: 18px;
+    height: 18px;
+    background: url(../img/zoom_sprite.png) no-repeat 0 0;
+    text-indent: -9999px;
     display: block;
-    color: #000 !important;
-    font-weight: bold;
+}
+    
+.OverviewZoom .Small:active {
+    background-position: 0 -18px;
 }
 
-.OverviewZoom a span {
-    line-height: 24px;
-    padding-left: 8px;
-    cursor: pointer;
+.OverviewZoom .Active .Small {
+    background-position: 0 -36px;
 }
 
-.RTL .OverviewZoom a span {
-    padding-left: 0px;
-    padding-right: 8px;
+.OverviewZoom .Medium {
+    background-position: -18px 0;
+}
+    
+.OverviewZoom .Medium:active {
+    background-position: -18px -18px;
+}
+    
+.OverviewZoom .Active .Medium {
+    background-position: -18px -36px;
+}
+    
+.OverviewZoom .Preview {
+    background-position: -36px 0;
 }
 
-.OverviewZoom li.Active {
-    background: url(../img/zoom_active2.png) no-repeat top left;
+.OverviewZoom .Preview:active {
+    background-position: -36px -18px;
 }
 
-.OverviewZoom li.Active a {
-    background: url(../img/zoom_active1.png) no-repeat top right;
-    color: #FFF !important;
-}
-
-.OverviewZoom li:hover {
-    background: url(../img/overviewcontrol_hover2.png) no-repeat top left;
-}
-
-.OverviewZoom li:hover a {
-    background: url(../img/overviewcontrol_hover1.png) no-repeat top right;
-    color: #000 !important;
+.OverviewZoom .Active .Preview {
+    background-position: -36px -36px;
 }
 
 .OverviewZoom + .Pagination {
